ensure footer social icons can be seen in dark high contrast mode

--- a/tbx/static_src/sass/components/_footer.scss
+++ b/tbx/static_src/sass/components/_footer.scss
@@ -208,6 +208,10 @@
     &__social-icon {
         fill: var(--color--dark-indigo);
         transition: fill $transition-quick;
+
+        @include hcm-dark-mode {
+            fill: var(--color--white);
+        }
     }
 
     &__social-item {
